--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<div class="accordion">
+<div class="accordion" data-collapse-siblings>
   <div class="collapsible" data-easing="linear" data-initially-open>
     <div class="collapsible__trigger">
       <a href="https://google.com" target="_blank">Trigger</a>
@@ -47,7 +47,7 @@
   </div>
 </div>
 
-<div class="collapsible">
+<!-- <div class="collapsible">
   <div class="collapsible__trigger">Trigger</div>
   <div class="collapsible__content">
     <div class="collapsible__inner">
@@ -96,4 +96,4 @@
       </p>
     </div>
   </div>
-</div>
+</div> -->
