--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <div class="accordion" data-collapse-siblings>
-  <div class="collapsible" data-easing="linear" data-initially-open>
+  <div class="collapsible" data-initially-open>
     <div class="collapsible__trigger">
       <a href="https://google.com" target="_blank">Trigger</a>
     </div>
@@ -47,7 +47,7 @@
   </div>
 </div>
 
-<!-- <div class="collapsible">
+<!-- <div class="collapsible" data-easing="linear">
   <div class="collapsible__trigger">Trigger</div>
   <div class="collapsible__content">
     <div class="collapsible__inner">
