--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </div>
   </div>
 
-  <div class="collapsible" data-duration="400">
+  <div class="collapsible">
     <div class="collapsible__trigger">Trigger</div>
     <div class="collapsible__content">
       <div class="collapsible__inner">
@@ -29,7 +29,56 @@
     </div>
   </div>
 
-  <div class="collapsible" data-trigger-on="hover">
+  <div class="collapsible">
+    <div class="collapsible__trigger">Trigger</div>
+    <div class="collapsible__content">
+      <div class="collapsible__inner">
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aperiam
+          explicabo nemo necessitatibus nulla, veniam libero minima velit
+          accusantium. Dignissimos blanditiis temporibus tenetur voluptate,
+          impedit odit et quia unde illo ad. Lorem ipsum, dolor sit amet
+          consectetur adipisicing elit. Aperiam explicabo nemo necessitatibus
+          nulla, veniam libero minima velit accusantium. Dignissimos blanditiis
+          temporibus tenetur voluptate, impedit odit et quia unde illo ad.
+        </p>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="accordion">
+  <div class="collapsible" data-initially-open>
+    <div class="collapsible__trigger">
+      <a href="https://google.com" target="_blank">Trigger</a>
+    </div>
+    <div class="collapsible__content">
+      <div class="collapsible__inner">
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aperiam
+          explicabo nemo necessitatibus nulla, veniam libero minima velit
+          accusantium. Dignissimos blanditiis temporibus tenetur voluptate,
+          impedit odit et quia unde illo ad.
+        </p>
+      </div>
+    </div>
+  </div>
+
+  <div class="collapsible">
+    <div class="collapsible__trigger">Trigger</div>
+    <div class="collapsible__content">
+      <div class="collapsible__inner">
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aperiam
+          explicabo nemo necessitatibus nulla, veniam libero minima velit
+          accusantium. Dignissimos blanditiis temporibus tenetur voluptate,
+          impedit odit et quia unde illo ad.
+        </p>
+      </div>
+    </div>
+  </div>
+
+  <div class="collapsible">
     <div class="collapsible__trigger">Trigger</div>
     <div class="collapsible__content">
       <div class="collapsible__inner">
@@ -64,7 +113,24 @@
   </div>
 </div>
 
-<div class="collapsible">
+<div class="collapsible" data-duration="400">
+  <div class="collapsible__trigger">Trigger</div>
+  <div class="collapsible__content">
+    <div class="collapsible__inner">
+      <p>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aperiam
+        explicabo nemo necessitatibus nulla, veniam libero minima velit
+        accusantium. Dignissimos blanditiis temporibus tenetur voluptate,
+        impedit odit et quia unde illo ad. Lorem ipsum, dolor sit amet
+        consectetur adipisicing elit. Aperiam explicabo nemo necessitatibus
+        nulla, veniam libero minima velit accusantium. Dignissimos blanditiis
+        temporibus tenetur voluptate, impedit odit et quia unde illo ad.
+      </p>
+    </div>
+  </div> -->
+<!-- </div> -->
+
+<div class="collapsible collapsible--absolute" data-trigger-on="hover" data-duration="400" data-easing="linear">
   <div class="collapsible__trigger">Trigger</div>
   <div class="collapsible__content">
     <div class="collapsible__inner">
@@ -80,20 +146,12 @@
     </div>
   </div>
 </div>
-
-<div class="collapsible">
-  <div class="collapsible__trigger">Trigger</div>
-  <div class="collapsible__content">
-    <div class="collapsible__inner">
-      <p>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aperiam
-        explicabo nemo necessitatibus nulla, veniam libero minima velit
-        accusantium. Dignissimos blanditiis temporibus tenetur voluptate,
-        impedit odit et quia unde illo ad. Lorem ipsum, dolor sit amet
-        consectetur adipisicing elit. Aperiam explicabo nemo necessitatibus
-        nulla, veniam libero minima velit accusantium. Dignissimos blanditiis
-        temporibus tenetur voluptate, impedit odit et quia unde illo ad.
-      </p>
-    </div>
-  </div>
-</div> -->
+<p>
+  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aperiam
+  explicabo nemo necessitatibus nulla, veniam libero minima velit
+  accusantium. Dignissimos blanditiis temporibus tenetur voluptate,
+  impedit odit et quia unde illo ad. Lorem ipsum, dolor sit amet
+  consectetur adipisicing elit. Aperiam explicabo nemo necessitatibus
+  nulla, veniam libero minima velit accusantium. Dignissimos blanditiis
+  temporibus tenetur voluptate, impedit odit et quia unde illo ad.
+</p>
