--- a/index.html
+++ b/index.html
@@ -130,7 +130,12 @@
   </div> -->
 <!-- </div> -->
 
-<div class="collapsible collapsible--absolute" data-trigger-on="hover" data-duration="400" data-easing="linear">
+<div
+  class="collapsible collapsible--absolute"
+  data-trigger-on="hover"
+  data-duration="3000"
+  data-easing="linear"
+>
   <div class="collapsible__trigger">Trigger</div>
   <div class="collapsible__content">
     <div class="collapsible__inner">
@@ -147,11 +152,10 @@
   </div>
 </div>
 <p>
-  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aperiam
-  explicabo nemo necessitatibus nulla, veniam libero minima velit
-  accusantium. Dignissimos blanditiis temporibus tenetur voluptate,
-  impedit odit et quia unde illo ad. Lorem ipsum, dolor sit amet
-  consectetur adipisicing elit. Aperiam explicabo nemo necessitatibus
-  nulla, veniam libero minima velit accusantium. Dignissimos blanditiis
-  temporibus tenetur voluptate, impedit odit et quia unde illo ad.
+  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aperiam explicabo
+  nemo necessitatibus nulla, veniam libero minima velit accusantium. Dignissimos
+  blanditiis temporibus tenetur voluptate, impedit odit et quia unde illo ad.
+  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aperiam explicabo
+  nemo necessitatibus nulla, veniam libero minima velit accusantium. Dignissimos
+  blanditiis temporibus tenetur voluptate, impedit odit et quia unde illo ad.
 </p>
