--- a/index.html
+++ b/index.html
@@ -111,10 +111,10 @@
       </p>
     </div>
   </div>
-</div>
+</div> -->
 
-<div class="collapsible" data-duration="400">
-  <div class="collapsible__trigger">Trigger</div>
+<div class="collapsible" data-duration="400" data-close-on-outside-click>
+  <div class="collapsible__trigger">Close on Outside Click</div>
   <div class="collapsible__content">
     <div class="collapsible__inner">
       <p>
@@ -127,16 +127,15 @@
         temporibus tenetur voluptate, impedit odit et quia unde illo ad.
       </p>
     </div>
-  </div> -->
-<!-- </div> -->
+  </div>
+</div>
 
 <div
   class="collapsible collapsible--absolute"
   data-trigger-on="hover"
-  data-duration="3000"
   data-easing="linear"
 >
-  <div class="collapsible__trigger">Trigger</div>
+  <div class="collapsible__trigger">Trigger On Hover</div>
   <div class="collapsible__content">
     <div class="collapsible__inner">
       <p>
