--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <div class="accordion" data-collapse-siblings>
   <div class="collapsible" data-initially-open>
     <div class="collapsible__trigger">
-      <a href="https://google.com" target="_blank">Trigger</a>
+      <a href="https://google.com" target="_blank">Collapse Siblings #1</a>
     </div>
     <div class="collapsible__content">
       <div class="collapsible__inner">
@@ -16,7 +16,7 @@
   </div>
 
   <div class="collapsible">
-    <div class="collapsible__trigger">Trigger</div>
+    <div class="collapsible__trigger">Collapse Siblings #2</div>
     <div class="collapsible__content">
       <div class="collapsible__inner">
         <p>
@@ -30,7 +30,7 @@
   </div>
 
   <div class="collapsible">
-    <div class="collapsible__trigger">Trigger</div>
+    <div class="collapsible__trigger">Collapse Siblings #3</div>
     <div class="collapsible__content">
       <div class="collapsible__inner">
         <p>
@@ -54,12 +54,101 @@
     </div>
     <div class="collapsible__content">
       <div class="collapsible__inner">
-        <p>
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aperiam
-          explicabo nemo necessitatibus nulla, veniam libero minima velit
-          accusantium. Dignissimos blanditiis temporibus tenetur voluptate,
-          impedit odit et quia unde illo ad.
-        </p>
+        <div class="accordion">
+          <div class="collapsible" data-initially-open>
+            <div class="collapsible__trigger">
+              <a href="https://google.com" target="_blank">Trigger</a>
+            </div>
+            <div class="collapsible__content">
+              <div class="collapsible__inner">
+                <div class="accordion">
+                  <div class="collapsible" data-initially-open>
+                    <div class="collapsible__trigger">
+                      <a href="https://google.com" target="_blank">Trigger</a>
+                    </div>
+                    <div class="collapsible__content">
+                      <div class="collapsible__inner">
+                        <p>
+                          Lorem ipsum, dolor sit amet consectetur adipisicing
+                          elit. Aperiam explicabo nemo necessitatibus nulla,
+                          veniam libero minima velit accusantium. Dignissimos
+                          blanditiis temporibus tenetur voluptate, impedit odit
+                          et quia unde illo ad.
+                        </p>
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="collapsible">
+                    <div class="collapsible__trigger">Trigger</div>
+                    <div class="collapsible__content">
+                      <div class="collapsible__inner">
+                        <p>
+                          Lorem ipsum, dolor sit amet consectetur adipisicing
+                          elit. Aperiam explicabo nemo necessitatibus nulla,
+                          veniam libero minima velit accusantium. Dignissimos
+                          blanditiis temporibus tenetur voluptate, impedit odit
+                          et quia unde illo ad.
+                        </p>
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="collapsible">
+                    <div class="collapsible__trigger">Trigger</div>
+                    <div class="collapsible__content">
+                      <div class="collapsible__inner">
+                        <p>
+                          Lorem ipsum, dolor sit amet consectetur adipisicing
+                          elit. Aperiam explicabo nemo necessitatibus nulla,
+                          veniam libero minima velit accusantium. Dignissimos
+                          blanditiis temporibus tenetur voluptate, impedit odit
+                          et quia unde illo ad. Lorem ipsum, dolor sit amet
+                          consectetur adipisicing elit. Aperiam explicabo nemo
+                          necessitatibus nulla, veniam libero minima velit
+                          accusantium. Dignissimos blanditiis temporibus tenetur
+                          voluptate, impedit odit et quia unde illo ad.
+                        </p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="collapsible">
+            <div class="collapsible__trigger">Trigger</div>
+            <div class="collapsible__content">
+              <div class="collapsible__inner">
+                <p>
+                  Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                  Aperiam explicabo nemo necessitatibus nulla, veniam libero
+                  minima velit accusantium. Dignissimos blanditiis temporibus
+                  tenetur voluptate, impedit odit et quia unde illo ad.
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <div class="collapsible">
+            <div class="collapsible__trigger">Trigger</div>
+            <div class="collapsible__content">
+              <div class="collapsible__inner">
+                <p>
+                  Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                  Aperiam explicabo nemo necessitatibus nulla, veniam libero
+                  minima velit accusantium. Dignissimos blanditiis temporibus
+                  tenetur voluptate, impedit odit et quia unde illo ad. Lorem
+                  ipsum, dolor sit amet consectetur adipisicing elit. Aperiam
+                  explicabo nemo necessitatibus nulla, veniam libero minima
+                  velit accusantium. Dignissimos blanditiis temporibus tenetur
+                  voluptate, impedit odit et quia unde illo ad.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
