--- a/index.html
+++ b/index.html
@@ -50,21 +50,23 @@
 <div class="accordion">
   <div class="collapsible" data-initially-open>
     <div class="collapsible__trigger">
-      <a href="https://google.com" target="_blank">Trigger</a>
+      <a href="https://google.com" target="_blank">Trigger lvl1</a>
     </div>
     <div class="collapsible__content">
       <div class="collapsible__inner">
         <div class="accordion">
           <div class="collapsible" data-initially-open>
             <div class="collapsible__trigger">
-              <a href="https://google.com" target="_blank">Trigger</a>
+              <a href="https://google.com" target="_blank">Trigger lvl2</a>
             </div>
             <div class="collapsible__content">
               <div class="collapsible__inner">
-                <div class="accordion">
+                <div class="accordion" data-collapse-siblings>
                   <div class="collapsible" data-initially-open>
                     <div class="collapsible__trigger">
-                      <a href="https://google.com" target="_blank">Trigger</a>
+                      <a href="https://google.com" target="_blank"
+                        >Trigger lvl3</a
+                      >
                     </div>
                     <div class="collapsible__content">
                       <div class="collapsible__inner">
@@ -80,7 +82,7 @@
                   </div>
 
                   <div class="collapsible">
-                    <div class="collapsible__trigger">Trigger</div>
+                    <div class="collapsible__trigger">Trigger lvl3</div>
                     <div class="collapsible__content">
                       <div class="collapsible__inner">
                         <p>
@@ -95,7 +97,7 @@
                   </div>
 
                   <div class="collapsible">
-                    <div class="collapsible__trigger">Trigger</div>
+                    <div class="collapsible__trigger">Trigger lvl3</div>
                     <div class="collapsible__content">
                       <div class="collapsible__inner">
                         <p>
@@ -118,7 +120,7 @@
           </div>
 
           <div class="collapsible">
-            <div class="collapsible__trigger">Trigger</div>
+            <div class="collapsible__trigger">Trigger lvl2</div>
             <div class="collapsible__content">
               <div class="collapsible__inner">
                 <p>
@@ -132,7 +134,7 @@
           </div>
 
           <div class="collapsible">
-            <div class="collapsible__trigger">Trigger</div>
+            <div class="collapsible__trigger">Trigger lvl2</div>
             <div class="collapsible__content">
               <div class="collapsible__inner">
                 <p>
@@ -154,7 +156,7 @@
   </div>
 
   <div class="collapsible">
-    <div class="collapsible__trigger">Trigger</div>
+    <div class="collapsible__trigger">Trigger lvl1</div>
     <div class="collapsible__content">
       <div class="collapsible__inner">
         <p>
@@ -168,7 +170,7 @@
   </div>
 
   <div class="collapsible">
-    <div class="collapsible__trigger">Trigger</div>
+    <div class="collapsible__trigger">Trigger lvl1</div>
     <div class="collapsible__content">
       <div class="collapsible__inner">
         <p>
