--- a/index.html
+++ b/index.html
@@ -48,14 +48,14 @@
 </div>
 
 <div class="accordion">
-  <div class="collapsible" data-initially-open>
+  <div class="collapsible">
     <div class="collapsible__trigger">
       <a href="https://google.com" target="_blank">Trigger lvl1</a>
     </div>
     <div class="collapsible__content">
       <div class="collapsible__inner">
         <div class="accordion">
-          <div class="collapsible" data-initially-open>
+          <div class="collapsible">
             <div class="collapsible__trigger">
               <a href="https://google.com" target="_blank">Trigger lvl2</a>
             </div>
@@ -187,22 +187,19 @@
   </div>
 </div>
 
-<!-- <div class="collapsible" data-easing="linear">
+<div class="collapsible" data-select>
   <div class="collapsible__trigger">Trigger</div>
   <div class="collapsible__content">
     <div class="collapsible__inner">
-      <p>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aperiam
-        explicabo nemo necessitatibus nulla, veniam libero minima velit
-        accusantium. Dignissimos blanditiis temporibus tenetur voluptate,
-        impedit odit et quia unde illo ad. Lorem ipsum, dolor sit amet
-        consectetur adipisicing elit. Aperiam explicabo nemo necessitatibus
-        nulla, veniam libero minima velit accusantium. Dignissimos blanditiis
-        temporibus tenetur voluptate, impedit odit et quia unde illo ad.
-      </p>
+      <button type="button" class="collapsible__option">Select Option 1</button>
+      <button type="button" class="collapsible__option">Select Option 2</button>
+      <button type="button" class="collapsible__option picked">
+        Select Option 3
+      </button>
+      <button type="button" class="collapsible__option">Select Option 4</button>
     </div>
   </div>
-</div> -->
+</div>
 
 <div class="collapsible" data-duration="400" data-close-on-outside-click>
   <div class="collapsible__trigger">Close on Outside Click</div>
