--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   <div class="collapsible" data-initially-open>
     <div class="collapsible__trigger">
       <a href="https://google.com" target="_blank">Collapse Siblings #1</a>
+      <span class="chevron"></span>
     </div>
     <div class="collapsible__content">
       <div class="collapsible__inner">
@@ -16,7 +17,10 @@
   </div>
 
   <div class="collapsible">
-    <div class="collapsible__trigger">Collapse Siblings #2</div>
+    <div class="collapsible__trigger">
+      Collapse Siblings #2
+      <span class="chevron"></span>
+    </div>
     <div class="collapsible__content">
       <div class="collapsible__inner">
         <p>
@@ -30,7 +34,10 @@
   </div>
 
   <div class="collapsible">
-    <div class="collapsible__trigger">Collapse Siblings #3</div>
+    <div class="collapsible__trigger">
+      Collapse Siblings #3
+      <span class="chevron"></span>
+    </div>
     <div class="collapsible__content">
       <div class="collapsible__inner">
         <p>
@@ -50,23 +57,26 @@
 <div class="accordion">
   <div class="collapsible">
     <div class="collapsible__trigger">
-      <a href="https://google.com" target="_blank">Trigger lvl1</a>
+      <a href="https://google.com" target="_blank"> Trigger lvl1 </a>
+      <span class="chevron"></span>
     </div>
     <div class="collapsible__content">
       <div class="collapsible__inner">
         <div class="accordion">
           <div class="collapsible">
             <div class="collapsible__trigger">
-              <a href="https://google.com" target="_blank">Trigger lvl2</a>
+              <a href="https://google.com" target="_blank"> Trigger lvl2 </a>
+              <span class="chevron"></span>
             </div>
             <div class="collapsible__content">
               <div class="collapsible__inner">
                 <div class="accordion" data-collapse-siblings>
                   <div class="collapsible" data-initially-open>
                     <div class="collapsible__trigger">
-                      <a href="https://google.com" target="_blank"
-                        >Trigger lvl3</a
-                      >
+                      <a href="https://google.com" target="_blank">
+                        Trigger lvl3
+                      </a>
+                      <span class="chevron"></span>
                     </div>
                     <div class="collapsible__content">
                       <div class="collapsible__inner">
@@ -82,7 +92,10 @@
                   </div>
 
                   <div class="collapsible">
-                    <div class="collapsible__trigger">Trigger lvl3</div>
+                    <div class="collapsible__trigger">
+                      Trigger lvl3
+                      <span class="chevron"></span>
+                    </div>
                     <div class="collapsible__content">
                       <div class="collapsible__inner">
                         <p>
@@ -97,7 +110,10 @@
                   </div>
 
                   <div class="collapsible">
-                    <div class="collapsible__trigger">Trigger lvl3</div>
+                    <div class="collapsible__trigger">
+                      Trigger lvl3
+                      <span class="chevron"></span>
+                    </div>
                     <div class="collapsible__content">
                       <div class="collapsible__inner">
                         <p>
@@ -120,7 +136,10 @@
           </div>
 
           <div class="collapsible">
-            <div class="collapsible__trigger">Trigger lvl2</div>
+            <div class="collapsible__trigger">
+              Trigger lvl2
+              <span class="chevron"></span>
+            </div>
             <div class="collapsible__content">
               <div class="collapsible__inner">
                 <p>
@@ -134,7 +153,10 @@
           </div>
 
           <div class="collapsible">
-            <div class="collapsible__trigger">Trigger lvl2</div>
+            <div class="collapsible__trigger">
+              Trigger lvl2
+              <span class="chevron"></span>
+            </div>
             <div class="collapsible__content">
               <div class="collapsible__inner">
                 <p>
@@ -156,7 +178,10 @@
   </div>
 
   <div class="collapsible">
-    <div class="collapsible__trigger">Trigger lvl1</div>
+    <div class="collapsible__trigger">
+      Trigger lvl1
+      <span class="chevron"></span>
+    </div>
     <div class="collapsible__content">
       <div class="collapsible__inner">
         <p>
@@ -170,7 +195,10 @@
   </div>
 
   <div class="collapsible">
-    <div class="collapsible__trigger">Trigger lvl1</div>
+    <div class="collapsible__trigger">
+      Trigger lvl1
+      <span class="chevron"></span>
+    </div>
     <div class="collapsible__content">
       <div class="collapsible__inner">
         <p>
@@ -188,7 +216,10 @@
 </div>
 
 <div class="collapsible" data-select>
-  <div class="collapsible__trigger">Trigger</div>
+  <div class="collapsible__trigger">
+    <span>Trigger</span>
+    <span class="chevron"></span>
+  </div>
   <div class="collapsible__content">
     <div class="collapsible__inner">
       <button type="button" class="collapsible__option">Select Option 1</button>
@@ -202,7 +233,10 @@
 </div>
 
 <div class="collapsible" data-duration="400" data-close-on-outside-click>
-  <div class="collapsible__trigger">Close on Outside Click</div>
+  <div class="collapsible__trigger">
+    Close on Outside Click
+    <span class="chevron"></span>
+  </div>
   <div class="collapsible__content">
     <div class="collapsible__inner">
       <p>
@@ -223,7 +257,10 @@
   data-trigger-on="hover"
   data-easing="linear"
 >
-  <div class="collapsible__trigger">Trigger On Hover</div>
+  <div class="collapsible__trigger">
+    Trigger On Hover
+    <span class="chevron"></span>
+  </div>
   <div class="collapsible__content">
     <div class="collapsible__inner">
       <p>
