--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 </div>
 
 <div class="accordion">
-  <div class="collapsible">
+  <div class="collapsible" data-initially-open>
     <div class="collapsible__trigger">
       <a href="https://google.com" target="_blank"> Trigger lvl1 </a>
       <span class="chevron"></span>
@@ -71,7 +71,7 @@
             <div class="collapsible__content">
               <div class="collapsible__inner">
                 <div class="accordion" data-collapse-siblings>
-                  <div class="collapsible" data-initially-open>
+                  <div class="collapsible">
                     <div class="collapsible__trigger">
                       <a href="https://google.com" target="_blank">
                         Trigger lvl3
@@ -80,13 +80,71 @@
                     </div>
                     <div class="collapsible__content">
                       <div class="collapsible__inner">
-                        <p>
-                          Lorem ipsum, dolor sit amet consectetur adipisicing
-                          elit. Aperiam explicabo nemo necessitatibus nulla,
-                          veniam libero minima velit accusantium. Dignissimos
-                          blanditiis temporibus tenetur voluptate, impedit odit
-                          et quia unde illo ad.
-                        </p>
+                        <div class="accordion" data-collapse-siblings>
+                          <div class="collapsible">
+                            <div class="collapsible__trigger">
+                              <a href="https://google.com" target="_blank">
+                                Trigger lvl4
+                              </a>
+                              <span class="chevron"></span>
+                            </div>
+                            <div class="collapsible__content">
+                              <div class="collapsible__inner">
+                                <p>
+                                  Lorem ipsum, dolor sit amet consectetur
+                                  adipisicing elit. Aperiam explicabo nemo
+                                  necessitatibus nulla, veniam libero minima
+                                  velit accusantium. Dignissimos blanditiis
+                                  temporibus tenetur voluptate, impedit odit et
+                                  quia unde illo ad.
+                                </p>
+                              </div>
+                            </div>
+                          </div>
+
+                          <div class="collapsible">
+                            <div class="collapsible__trigger">
+                              Trigger lvl4
+                              <span class="chevron"></span>
+                            </div>
+                            <div class="collapsible__content">
+                              <div class="collapsible__inner">
+                                <p>
+                                  Lorem ipsum, dolor sit amet consectetur
+                                  adipisicing elit. Aperiam explicabo nemo
+                                  necessitatibus nulla, veniam libero minima
+                                  velit accusantium. Dignissimos blanditiis
+                                  temporibus tenetur voluptate, impedit odit et
+                                  quia unde illo ad.
+                                </p>
+                              </div>
+                            </div>
+                          </div>
+
+                          <div class="collapsible">
+                            <div class="collapsible__trigger">
+                              Trigger lvl4
+                              <span class="chevron"></span>
+                            </div>
+                            <div class="collapsible__content">
+                              <div class="collapsible__inner">
+                                <p>
+                                  Lorem ipsum, dolor sit amet consectetur
+                                  adipisicing elit. Aperiam explicabo nemo
+                                  necessitatibus nulla, veniam libero minima
+                                  velit accusantium. Dignissimos blanditiis
+                                  temporibus tenetur voluptate, impedit odit et
+                                  quia unde illo ad. Lorem ipsum, dolor sit amet
+                                  consectetur adipisicing elit. Aperiam
+                                  explicabo nemo necessitatibus nulla, veniam
+                                  libero minima velit accusantium. Dignissimos
+                                  blanditiis temporibus tenetur voluptate,
+                                  impedit odit et quia unde illo ad.
+                                </p>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
                       </div>
                     </div>
                   </div>
