data-duration and data-easing applicable to accordion (overwrites data on children collapsibles)

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<div class="accordion" data-collapse-siblings>
+<div class="accordion" data-collapse-siblings data-duration="1000">
   <div class="collapsible" data-initially-open>
     <div class="collapsible__trigger">
       <a href="https://google.com" target="_blank">Collapse Siblings #1</a>
