--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<div class="accordion" data-collapse-siblings data-duration="1000">
+<div class="accordion" data-collapse-siblings data-duration="600">
   <div class="collapsible" data-initially-open>
     <div class="collapsible__trigger">
       <a href="https://google.com" target="_blank">Collapse Siblings #1</a>
@@ -54,7 +54,7 @@
   </div>
 </div>
 
-<div class="accordion">
+<div class="accordion" data-duration="600">
   <div class="collapsible">
     <div class="collapsible__trigger">
       <a href="https://google.com" target="_blank"> Trigger lvl1 </a>
@@ -313,7 +313,7 @@
 <div
   class="collapsible collapsible--absolute"
   data-trigger-on="hover"
-  data-duration="600"
+  data-duration="400"
   data-keyframes='[
     {
       "opacity": 0, 
