--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
 <div class="accordion" data-collapse-siblings data-duration="600">
   <div class="collapsible" data-initially-open>
-    <div class="collapsible__trigger">
+    <button
+      class="collapsible__trigger"
+      type="button"
+      aria-label="toggle collapsible"
+    >
       <a href="https://google.com" target="_blank">Collapse Siblings #1</a>
       <span class="chevron"></span>
-    </div>
+    </button>
     <div class="collapsible__content">
       <div class="collapsible__inner">
         <p>
@@ -17,10 +21,14 @@
   </div>
 
   <div class="collapsible">
-    <div class="collapsible__trigger">
+    <button
+      class="collapsible__trigger"
+      type="button"
+      aria-label="toggle collapsible"
+    >
       Collapse Siblings #2
       <span class="chevron"></span>
-    </div>
+    </button>
     <div class="collapsible__content">
       <div class="collapsible__inner">
         <p>
@@ -34,10 +42,38 @@
   </div>
 
   <div class="collapsible">
-    <div class="collapsible__trigger">
+    <button
+      class="collapsible__trigger"
+      type="button"
+      aria-label="toggle collapsible"
+    >
       Collapse Siblings #3
       <span class="chevron"></span>
+    </button>
+    <div class="collapsible__content">
+      <div class="collapsible__inner">
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aperiam
+          explicabo nemo necessitatibus nulla, veniam libero minima velit
+          accusantium. Dignissimos blanditiis temporibus tenetur voluptate,
+          impedit odit et quia unde illo ad. Lorem ipsum, dolor sit amet
+          consectetur adipisicing elit. Aperiam explicabo nemo necessitatibus
+          nulla, veniam libero minima velit accusantium. Dignissimos blanditiis
+          temporibus tenetur voluptate, impedit odit et quia unde illo ad.
+        </p>
+      </div>
     </div>
+  </div>
+
+  <div class="collapsible">
+    <button
+      class="collapsible__trigger"
+      type="button"
+      aria-label="toggle collapsible"
+    >
+      Collapse Siblings #4
+      <span class="chevron"></span>
+    </button>
     <div class="collapsible__content">
       <div class="collapsible__inner">
         <p>
@@ -54,40 +90,56 @@
   </div>
 </div>
 
-<div class="accordion" data-duration="600">
+<div class="accordion">
   <div class="collapsible">
-    <div class="collapsible__trigger">
+    <button
+      class="collapsible__trigger"
+      type="button"
+      aria-label="toggle collapsible"
+    >
       <a href="https://google.com" target="_blank"> Trigger lvl1 </a>
       <span class="chevron"></span>
-    </div>
+    </button>
     <div class="collapsible__content">
       <div class="collapsible__inner">
         <div class="accordion">
           <div class="collapsible">
-            <div class="collapsible__trigger">
+            <button
+              class="collapsible__trigger"
+              type="button"
+              aria-label="toggle collapsible"
+            >
               <a href="https://google.com" target="_blank"> Trigger lvl2 </a>
               <span class="chevron"></span>
-            </div>
+            </button>
             <div class="collapsible__content">
               <div class="collapsible__inner">
                 <div class="accordion" data-collapse-siblings>
                   <div class="collapsible">
-                    <div class="collapsible__trigger">
+                    <button
+                      class="collapsible__trigger"
+                      type="button"
+                      aria-label="toggle collapsible"
+                    >
                       <a href="https://google.com" target="_blank">
                         Trigger lvl3
                       </a>
                       <span class="chevron"></span>
-                    </div>
+                    </button>
                     <div class="collapsible__content">
                       <div class="collapsible__inner">
                         <div class="accordion" data-collapse-siblings>
                           <div class="collapsible">
-                            <div class="collapsible__trigger">
+                            <button
+                              class="collapsible__trigger"
+                              type="button"
+                              aria-label="toggle collapsible"
+                            >
                               <a href="https://google.com" target="_blank">
                                 Trigger lvl4
                               </a>
                               <span class="chevron"></span>
-                            </div>
+                            </button>
                             <div class="collapsible__content">
                               <div class="collapsible__inner">
                                 <p>
@@ -103,10 +155,14 @@
                           </div>
 
                           <div class="collapsible">
-                            <div class="collapsible__trigger">
+                            <button
+                              class="collapsible__trigger"
+                              type="button"
+                              aria-label="toggle collapsible"
+                            >
                               Trigger lvl4
                               <span class="chevron"></span>
-                            </div>
+                            </button>
                             <div class="collapsible__content">
                               <div class="collapsible__inner">
                                 <p>
@@ -122,10 +178,14 @@
                           </div>
 
                           <div class="collapsible">
-                            <div class="collapsible__trigger">
+                            <button
+                              class="collapsible__trigger"
+                              type="button"
+                              aria-label="toggle collapsible"
+                            >
                               Trigger lvl4
                               <span class="chevron"></span>
-                            </div>
+                            </button>
                             <div class="collapsible__content">
                               <div class="collapsible__inner">
                                 <p>
@@ -150,10 +210,14 @@
                   </div>
 
                   <div class="collapsible">
-                    <div class="collapsible__trigger">
+                    <button
+                      class="collapsible__trigger"
+                      type="button"
+                      aria-label="toggle collapsible"
+                    >
                       Trigger lvl3
                       <span class="chevron"></span>
-                    </div>
+                    </button>
                     <div class="collapsible__content">
                       <div class="collapsible__inner">
                         <p>
@@ -168,10 +232,14 @@
                   </div>
 
                   <div class="collapsible">
-                    <div class="collapsible__trigger">
+                    <button
+                      class="collapsible__trigger"
+                      type="button"
+                      aria-label="toggle collapsible"
+                    >
                       Trigger lvl3
                       <span class="chevron"></span>
-                    </div>
+                    </button>
                     <div class="collapsible__content">
                       <div class="collapsible__inner">
                         <p>
@@ -194,10 +262,14 @@
           </div>
 
           <div class="collapsible">
-            <div class="collapsible__trigger">
+            <button
+              class="collapsible__trigger"
+              type="button"
+              aria-label="toggle collapsible"
+            >
               Trigger lvl2
               <span class="chevron"></span>
-            </div>
+            </button>
             <div class="collapsible__content">
               <div class="collapsible__inner">
                 <p>
@@ -211,10 +283,14 @@
           </div>
 
           <div class="collapsible">
-            <div class="collapsible__trigger">
+            <button
+              class="collapsible__trigger"
+              type="button"
+              aria-label="toggle collapsible"
+            >
               Trigger lvl2
               <span class="chevron"></span>
-            </div>
+            </button>
             <div class="collapsible__content">
               <div class="collapsible__inner">
                 <p>
@@ -236,10 +312,14 @@
   </div>
 
   <div class="collapsible">
-    <div class="collapsible__trigger">
+    <button
+      class="collapsible__trigger"
+      type="button"
+      aria-label="toggle collapsible"
+    >
       Trigger lvl1
       <span class="chevron"></span>
-    </div>
+    </button>
     <div class="collapsible__content">
       <div class="collapsible__inner">
         <p>
@@ -253,10 +333,14 @@
   </div>
 
   <div class="collapsible">
-    <div class="collapsible__trigger">
+    <button
+      class="collapsible__trigger"
+      type="button"
+      aria-label="toggle collapsible"
+    >
       Trigger lvl1
       <span class="chevron"></span>
-    </div>
+    </button>
     <div class="collapsible__content">
       <div class="collapsible__inner">
         <p>
@@ -274,27 +358,41 @@
 </div>
 
 <div class="collapsible" data-select>
-  <div class="collapsible__trigger">
+  <button
+    class="collapsible__trigger"
+    type="button"
+    aria-label="toggle collapsible"
+  >
     <span class="collapsible__select-current">Trigger</span>
     <span class="chevron"></span>
-  </div>
+  </button>
   <div class="collapsible__content">
     <div class="collapsible__inner">
-      <button type="button" class="collapsible__option">Select Option 1</button>
-      <button type="button" class="collapsible__option">Select Option 2</button>
-      <button type="button" class="collapsible__option picked">
+      <button type="button" class="collapsible__option" data-value="1">
+        Select Option 1
+      </button>
+      <button type="button" class="collapsible__option" data-value="2">
+        Select Option 2
+      </button>
+      <button type="button" class="collapsible__option picked" data-value="3">
         Select Option 3
       </button>
-      <button type="button" class="collapsible__option">Select Option 4</button>
+      <button type="button" class="collapsible__option" data-value="4">
+        Select Option 4
+      </button>
     </div>
   </div>
 </div>
 
 <div class="collapsible" data-duration="400" data-close-on-outside-click>
-  <div class="collapsible__trigger">
+  <button
+    class="collapsible__trigger"
+    type="button"
+    aria-label="toggle collapsible"
+  >
     Close on Outside Click
     <span class="chevron"></span>
-  </div>
+  </button>
   <div class="collapsible__content">
     <div class="collapsible__inner">
       <p>
@@ -331,10 +429,14 @@
     }
   ]'
 >
-  <div class="collapsible__trigger">
+  <button
+    class="collapsible__trigger"
+    type="button"
+    aria-label="toggle collapsible"
+  >
     Trigger On Hover
     <span class="chevron"></span>
-  </div>
+  </button>
   <div class="collapsible__content">
     <div class="collapsible__inner">
       <p>
