--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
       type="button"
       aria-label="toggle collapsible"
     >
-      <a href="https://google.com" target="_blank">Collapse Siblings #1</a>
+      <a href="https://google.com" target="_blank" onclick="event.stopPropagation()">Collapse Siblings #1</a>
       <span class="chevron"></span>
     </button>
     <div class="collapsible__content">
