--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!-- add stopPropagation internally and and data-trigger-hover -->
+
 <div class="accordion" data-collapse-siblings data-duration="600">
   <div class="collapsible" data-initially-open>
     <button
@@ -5,7 +7,12 @@
       type="button"
       aria-label="toggle collapsible"
     >
-      <a href="https://google.com" target="_blank" onclick="event.stopPropagation()">Collapse Siblings #1</a>
+      <a
+        href="https://google.com"
+        target="_blank"
+        onclick="event.stopPropagation()"
+        >Collapse Siblings #1</a
+      >
       <span class="chevron"></span>
     </button>
     <div class="collapsible__content">
