--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
   </div>
 </div>
 
-<div class="collapsible" data-select>
+<div class="collapsible" data-select data-hover-trigger>
   <button
     class="collapsible__trigger"
     type="button"
